
#file (COPY      ${CMAKE_CURRENT_SOURCE_DIR}/VERIFY_OUTPUT
#	DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# Replace @OSUFLOW_DIR@ in script VERIFY_OUTPUT
# replacement expression to search for
SET (SEARCH_REGEX "/\@OSUFLOW_DIR\@/")
# replace text in all files
FILE(READ ${CMAKE_CURRENT_SOURCE_DIR}/VERIFY_OUTPUT.in FILE_CONTENT)
 STRING(REGEX REPLACE "\@OSUFLOW_DIR\@" "${OSUFLOW_DIR}" 
        MODIFIED_FILE_CONTENT "${FILE_CONTENT}")
 FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/VERIFY_OUTPUT "${MODIFIED_FILE_CONTENT}")
#message("${MODIFIED_FILE_CONTENT}")
# end replacement

file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/data
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory (TestMPI)
add_subdirectory (TestSerial)
